--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -12,11 +12,9 @@
         },
         "useBuiltIns": "usage",
         "corejs": "3.6.5"
-      }
+      },
+      "@babel/preset-typescript"
     ]
   ],
-  "plugins": [
-    "@babel/plugin-transform-typescript",
-    "@babel/plugin-proposal-object-rest-spread"
-  ]
+  "plugins": ["@babel/plugin-transform-typescript", "@babel/plugin-proposal-object-rest-spread"]
 }
