--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@babel/core": "^7.18.6",
     "@babel/plugin-transform-typescript": "^7.18.8",
     "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "babel-loader": "^8.2.5",
+    "core-js": "^3.23.4",
     "css-loader": "^6.7.1",
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -29,6 +31,7 @@
     "eslint-plugin-import": "^2.26.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.19",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
@@ -36,8 +39,7 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3",
-    "nodemon": "^2.0.19"
+    "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
     "eslint-config-prettier": "^8.5.0",
