--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
     "eslint-plugin-import": "^2.26.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.19",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
+    "sass-to-string": "^1.6.3",
     "style-loader": "^3.3.1",
     "typescript": "^4.7.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3",
-    "nodemon": "^2.0.19"
+    "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
     "eslint-config-prettier": "^8.5.0",
