--- a/package.json
+++ b/package.json
@@ -17,26 +17,18 @@
   "devDependencies": {
     "@babel/cli": "^7.18.6",
     "@babel/core": "^7.18.6",
-    "@babel/plugin-transform-typescript": "^7.18.8",
     "@babel/preset-env": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
     "babel-loader": "^8.2.5",
     "core-js": "^3.23.4",
     "css-loader": "^6.7.1",
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-import-resolver-typescript": "^3.2.5",
     "eslint-plugin-import": "^2.26.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.19",
-    "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
-    "sass-to-string": "^1.6.3",
     "style-loader": "^3.3.1",
-    "typescript": "^4.7.4",
+    "to-string-loader": "^1.2.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
