--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,8 @@
 {
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["prettier"],
   "extends": [
     // Airbnb style guide 적용
-    "airbnb-base",
-    // TypeScript ESLint recommanded style 적용
-    "plugin:@typescript-eslint/eslint-recommended"
+    "airbnb-base"
   ],
   "rules": {
     "prettier/prettier": "error",
@@ -16,10 +13,9 @@
   "settings": {
     "import/resolver": {
       "node": {
-        "extensions": [".js", ".ts"],
-        "moduleDirectory": ["node_modules", "@types"]
-      },
-      "typescript": {} // 프로젝트 Root의 tsconfig.json을 찾는다.
+        "extensions": [".js"],
+        "moduleDirectory": ["node_modules"]
+      }
     }
   }
 }
