--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3"
   }
 }
