--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,6 @@
   "printWidth": 120,
   "tabWidth": 2,
   "semi": true,
-  "arrowParens": "avoid",
+  "arrowParents": "avoid",
   "endOfLine": "lf"
 }
