--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
